<resources>
    <!-- Application and Activity titles -->
    <string name="app_name">VTHokieFinder</string>
    <string name="create_circle">New Circle</string>
    <string name="find_friends">Find Friends</string>
    <string name="find_circles">Find Circles</string>
    <string name="details">Details</string>
    <string name="profile">Profile</string>
    <string name="invites">Invites</string>
    <string name="settings">Settings</string>

    <!-- Descriptions for toolbar items -->
    <string name="action_broadcast">Broadcast</string>
    <string name="action_show_circles">Show Circles</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_add_circle">Add circle</string>
    <string name="action_leave_circle">Leave circle</string>
    <string name="action_cancel_circle_request">Cancel request</string>
    <string name="action_add_friend">Add friend</string>
    <string name="action_remove_friend">Remove friend</string>
    <string name="action_cancel_pending">Cancel request</string>

    <!-- Descriptions for navigation drawer actions and items -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_invites">Invites</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>

    <!-- Actions to handle invites to circles -->
    <string-array name="actions_circle_invites">
        <item>Accept invite</item>
        <item>Decline invite</item>
    </string-array>

    <!-- Actions to handle requests to join circles -->
    <string-array name="actions_circle_membership_requests">
        <item>Approve request</item>
        <item>Deny request</item>
    </string-array>

    <!-- Actions to handle incoming friend invites -->
    <string-array name="actions_incoming_friend_invites">
        <item>Accept invite</item>
        <item>Decline invite</item>
    </string-array>

    <!-- Actions to handle outgoing friend invites -->
    <string-array name="actions_outgoing_friend_invites">
        <item>Cancel invite</item>
    </string-array>

    <!-- Actions to handle non-friends -->
    <string-array name="actions_nonfriends">
        <item>Add as friend</item>
    </string-array>

    <!-- Actions to handle friends -->
    <string-array name="actions_friends">
        <item>Remove friend</item>
    </string-array>

    <string name="action_search">Search</string>
    <string name="user_search_hint">Search username or email</string>

    <!-- Application IDs / API keys -->
    <string name="facebook_application_id">1636789559907792</string>
    <string name="google_geo_api_key">AIzaSyBKgiId5G7FVQR8YQFRyMVhXuRkVIEhcOk</string>
    <string name="google_server_api_key">AIzaSyBIK_kAFACf_1nTUjb-p9mOi1Ph-5yMR2k</string>

    <!-- Facebook permissions -->
    <string-array name="facebook_permissions">
        <item>public_profile</item>
        <item>email</item>
        <item>user_friends</item>
    </string-array>
</resources>
