<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
    <item android:id="@+id/action_broadcast"
        android:title="@string/action_broadcast"
        android:icon="@drawable/ic_broadcast"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_show_circles"
        android:icon="@drawable/ic_menu"
        android:title="@string/action_show_circles"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="102"
        app:showAsAction="never" />
</menu>
