<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item android:id="@+id/drawer_profile"
            android:title="@string/drawer_profile"
            android:icon="@drawable/ic_person_black_48dp" />
        <item android:id="@+id/drawer_friends"
            android:title="@string/drawer_friends"
            android:icon="@drawable/ic_people_black_48dp" />
        <item android:id="@+id/drawer_settings"
            android:title="@string/drawer_settings"
            android:icon="@drawable/ic_settings_black_48dp" />
        <item android:id="@+id/drawer_logout"
            android:title="@string/drawer_logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp" />
    </group>
</menu>